Made the website SEO friendly

--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Olesia</title>
+    <meta name="description" content="About Olesia. Olesia is a front-end engieer from Ukraine based in Germany">
+    <title>About Olesia's work as a designer & front-end developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,25 +32,25 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Home</a>
+        <a class="navbar-brand" href="/index.html" title="Homepage">Home</a>
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
+          data-bs-target="#navbarNavMarkup"
+          aria-controls="navbarNavMarkup"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <i class="fa-solid fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse" id="navbarNavMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/about.html"
+            <a class="nav-link active" aria-current="page" href="/about.html" title="About Olesia"
               >About</a
             >
-            <a class="nav-link" href="/work.html">Work</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/work.html" title="Olesia'sWork">Work</a>
+            <a class="nav-link" href="/contact.html" title="Contact Olesia">Contact</a>
           </div>
         </div>
       </div>
@@ -60,7 +61,7 @@
     <div class="container text-center">
       <div class="row mt-5">
           <div class="col-lg-6">
-          <img src="images/10.jpg" width="300px" class="img-fluid mb-5" alt="" />
+          <img src="images/10.jpg" width="300px" class="img-fluid mb-5" alt="Olesia's Photo" />
         </div>
         <div class="col-lg-6">
           <p class="text-start">
@@ -72,7 +73,7 @@
           </p>      
         </div>
         <div class="button">
-      <a href="/index.html#weather"> <button class="btn btn-outline-dark mt-5 mb-2 shadow-lg">See my projects</button>
+      <a href="/index.html#weather" title="Go to homepage projects"> <button class="btn btn-outline-dark mt-5 mb-2 shadow-lg">See my projects</button>
             </a>
             </div>
       </div>
@@ -88,7 +89,7 @@
           target="_blank"
           ><i class="fa-brands fa-facebook"></i
         ></a>
-        <a href="https://github.com/Olesia20" title="Github lik" target="_blank"
+        <a href="https://github.com/Olesia20" title="Github Profile" target="_blank"
           ><i class="fa-brands fa-github"></i
         ></a>
       </div>
