--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Olesia</title>
+    <meta
+      name="description"
+      content="Olesia is a front-end engieer from Ukraine based in Germany."
+    />
+    <title>Front-end developer-Olesia Kononova</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,7 +35,12 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Home</a>
+        <a
+          class="navbar-brand nav-link active"
+          href="/index.html"
+          title="Homepage"
+          >Home</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -45,11 +54,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/about.html"
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="/about.html"
+              title="About Olesia"
               >About</a
             >
-            <a class="nav-link" href="/work.html">Work</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/work.html" title="Olesia'sWork">Work</a>
+            <a class="nav-link" href="/contact.html" title="Contact Olesia"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -63,30 +78,40 @@
         <div class="row">
           <div class="col-lg-6 text-center mt-5">
             <a href="/work.html"
-              ><img src="images/23.jpg" class="img-fluid" alt=""
+              ><img src="images/23.jpg" class="img-fluid" alt="Fashion Show"
             /></a>
-            <a href="work.html"> <h4 class="mt-4">Fashion show</h4></a>
+            <a href="work.html" title="Go to work page">
+              <h4 class="mt-4">Fashion show</h4></a
+            >
           </div>
           <div class="col-lg-6 text-center mt-5">
             <a href="/work.html#pattern"
-              ><img src="images/15.jpg" class="img-fluid" alt=""
+              ><img src="images/15.jpg" class="img-fluid" alt="Fashion show"
             /></a>
-            <a href="/work.html#pattern"> <h4 class="mt-4">Pattern work</h4></a>
+            <a href="/work.html#pattern" title="Go to work page">
+              <h4 class="mt-4">Pattern work</h4></a
+            >
           </div>
           <div id="weather" class="col-lg-6 text-center mt-5">
             <a href="https://cheerful-youtiao-b57c39.netlify.app/"
-              ><img src="images/weather.png" class="img-fluid" alt=""
+              ><img
+                src="images/weather.png"
+                class="img-fluid"
+                alt="Weather app Preview"
             /></a>
             <a href="https://cheerful-youtiao-b57c39.netlify.app/">
-              <h4 class="mt-4">Weather app</h4></a
+              <h4 class="mt-4" title="Go to Netlify">Weather app</h4></a
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
             <a href="https://fabulous-belekoy-ceb011.netlify.app/"
-              ><img src="images/ukraine.png" class="img-fluid" alt=""
+              ><img
+                src="images/ukraine.png"
+                class="img-fluid"
+                alt="Ukraine app Preview"
             /></a>
             <a href="https://fabulous-belekoy-ceb011.netlify.app/">
-              <h4 class="mt-4">Ukraine app</h4></a
+              <h4 class="mt-4" title="Go to Netlify">Ukraine app</h4></a
             >
           </div>
           <div class="text-center">
@@ -94,16 +119,22 @@
               href="https://joyful-granita-e16e66.netlify.app/"
               target="_blank"
             >
-              <img src="images/portfolio.png" class="img-fluid" alt=""
+              <img
+                src="images/portfolio.png"
+                class="img-fluid"
+                alt="Portfolio app Preview"
             /></a>
             <a href="https://joyful-granita-e16e66.netlify.app/" target="_blank"
-              ><h4 class="mt-4">Portfolio app</h4></a
+              ><h4 class="mt-4" title="Go to Netlify">Portfolio app</h4></a
             >
           </div>
         </div>
       </div>
       <div class="button">
-        <a href="/contact.html" class="btn btn-outline-dark mt-5 shadow-lg"
+        <a
+          href="/contact.html"
+          class="btn btn-outline-dark mt-5 shadow-lg"
+          title="Go to contact page"
           >Contact me</a
         >
       </div>
@@ -117,7 +148,10 @@
           target="_blank"
           ><i class="fa-brands fa-facebook"></i
         ></a>
-        <a href="https://github.com/Olesia20" title="Github lik" target="_blank"
+        <a
+          href="https://github.com/Olesia20"
+          title="Github Profile"
+          target="_blank"
           ><i class="fa-brands fa-github"></i
         ></a>
       </div>
