--- a/work.html
+++ b/work.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fashion_Pattern_Work</title>
+    <meta
+      name="description"
+      content="Olesia's work. Olesia is a front-end engieer from Ukraine based in Germany"
+    />
+    <title>Olesia's work fashion designer & front-end developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,7 +35,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Home</a>
+        <a class="navbar-brand" href="/index.html" title="Homepage">Home</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,11 +49,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/about.html"
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="/about.html"
+              title="About Olesia"
               >About</a
             >
-            <a class="nav-link" href="/work.html">Work</a>
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link active" href="/work.html" title="Olesia'sWork"
+              >Work</a
+            >
+            <a class="nav-link" href="/contact.html" title="Contact Olesia"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -67,76 +79,76 @@
     >
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="images/2.jpg" class="d-block w-100" alt="..." />
+          <img src="images/2.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/3.jpeg" class="d-block w-100" alt="..." />
+          <img src="images/3.jpeg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/4.jpg" class="d-block w-100" alt="..." />
+          <img src="images/4.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/5.jpg" class="d-block w-100" alt="..." />
+          <img src="images/5.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/6.jpg" class="d-block w-100" alt="..." />
+          <img src="images/6.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/7.jpeg" class="d-block w-100" alt="..." />
+          <img src="images/7.jpeg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/8.jpeg" class="d-block w-100" alt="..." />
+          <img src="images/8.jpeg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/9.jpeg" class="d-block w-100" alt="..." />
+          <img src="images/9.jpeg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/13.jpeg" class="d-block w-100" alt="..." />
+          <img src="images/13.jpeg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/14.jpg" class="d-block w-100" alt="..." />
+          <img src="images/14.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/2a.jpeg" class="d-block w-100" alt="..." />
+          <img src="images/2a.jpeg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/16.jpg" class="d-block w-100" alt="..." />
+          <img src="images/16.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/17.jpg" class="d-block w-100" alt="..." />
+          <img src="images/17.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/18.jpg" class="d-block w-100" alt="..." />
+          <img src="images/18.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/19.jpg" class="d-block w-100" alt="..." />
+          <img src="images/19.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/20.jpg" class="d-block w-100" alt="..." />
+          <img src="images/20.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/21.jpg" class="d-block w-100" alt="..." />
+          <img src="images/21.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/22.jpg" class="d-block w-100" alt="..." />
+          <img src="images/22.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/23.jpg" class="d-block w-100" alt="..." />
+          <img src="images/23.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/24.jpg" class="d-block w-100" alt="..." />
+          <img src="images/24.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/25.jpg" class="d-block w-100" alt="..." />
+          <img src="images/25.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/26.jpg" class="d-block w-100" alt="..." />
+          <img src="images/26.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/27.jpg" class="d-block w-100" alt="..." />
+          <img src="images/27.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/28.jpg" class="d-block w-100" alt="..." />
+          <img src="images/28.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
       </div>
       <button
@@ -161,76 +173,76 @@
     <div id="fashion" class="container mb-5">
       <div class="row">
         <div class="col-lg-2">
-          <img src="images/2.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/2.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/3.jpeg" class="img-fluid mt-3" alt="" />
+          <img src="images/3.jpeg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/4.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/4.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/5.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/5.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/6.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/6.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/7.jpeg" class="img-fluid mt-3" alt="" />
+          <img src="images/7.jpeg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/8.jpeg" class="img-fluid mt-3" alt="" />
+          <img src="images/8.jpeg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/9.jpeg" class="img-fluid mt-3" alt="" />
+          <img src="images/9.jpeg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/13.jpeg" class="img-fluid mt-3" alt="" />
+          <img src="images/13.jpeg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/14.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/14.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/2a.jpeg" class="img-fluid mt-3" alt="" />
+          <img src="images/2a.jpeg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/16.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/16.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/17.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/17.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/18.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/18.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/19.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/19.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/20.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/20.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/21.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/21.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/22.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/22.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/23.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/23.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/24.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/24.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/25.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/25.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/26.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/26.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/27.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/27.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/28.jpg" class="img-fluid mt-3" alt="" />
+          <img src="images/28.jpg" class="img-fluid mt-3" alt="Fashion show" />
         </div>
       </div>
     </div>
@@ -241,7 +253,11 @@
     <div class="container">
       <div class="row mt-5">
         <div class="col-lg-6">
-          <img src="images/1.png" class="photo" alt="" />
+          <img
+            src="images/1.png"
+            class="photo"
+            alt="Plate with pattern chicken"
+          />
         </div>
         <div class="paragraf col-lg-6">
           <p>
@@ -259,22 +275,22 @@
     >
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="images/30.jpg" class="d-block w-100" alt="..." />
+          <img src="images/30.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="images/31.jpg" class="d-block w-100" alt="..." />
+          <img src="images/31.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/32.jpg" class="d-block w-100" alt="..." />
+          <img src="images/32.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/33.jpg" class="d-block w-100" alt="..." />
+          <img src="images/33.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/34.jpg" class="d-block w-100" alt="..." />
+          <img src="images/34.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
-          <img src="images/35.jpg" class="d-block w-100" alt="..." />
+          <img src="images/35.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
       </div>
       <button
@@ -299,22 +315,22 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-2">
-          <img src="images/30.jpg" class="img-fluid mb-3" alt="" />
+          <img src="images/30.jpg" class="img-fluid mb-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/31.jpg" class="img-fluid mb-3" alt="" />
+          <img src="images/31.jpg" class="img-fluid mb-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/32.jpg" class="img-fluid mb-3" alt="" />
+          <img src="images/32.jpg" class="img-fluid mb-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/33.jpg" class="img-fluid mb-3" alt="" />
+          <img src="images/33.jpg" class="img-fluid mb-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/34.jpg" class="img-fluid mb-3" alt="" />
+          <img src="images/34.jpg" class="img-fluid mb-3" alt="Fashion show" />
         </div>
         <div class="col-lg-2">
-          <img src="images/35.jpg" class="img-fluid mb-3" alt="" />
+          <img src="images/35.jpg" class="img-fluid mb-3" alt="Fashion show" />
         </div>
       </div>
       <div class="scrollUp">
@@ -330,7 +346,10 @@
           target="_blank"
           ><i class="fa-brands fa-facebook"></i
         ></a>
-        <a href="https://github.com/Olesia20" title="Github lik" target="_blank"
+        <a
+          href="https://github.com/Olesia20"
+          title="Github Profile"
+          target="_blank"
           ><i class="fa-brands fa-github"></i
         ></a>
       </div>
