--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact Olesia. Olesia is a front-end engieer from Ukraine based in Germany"
+    />
     <title>Contact Olesia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,7 +35,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Home</a>
+        <a class="navbar-brand" href="/index.html" title="Homepage">Home</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,11 +49,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/about.html"
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="/about.html"
+              title="About Olesia"
               >About</a
             >
-            <a class="nav-link" href="/work.html">Work</a>
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="/work.html" title="Olesia'sWork">Work</a>
+            <a
+              class="nav-link active"
+              href="contact.html"
+              title="Contact Olesia"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -74,7 +87,10 @@
       <a href="https://www.facebook.com/" title="Facebook link" target="_blank"
         ><i class="fa-brands fa-facebook"></i
       ></a>
-      <a href="https://github.com/Olesia20" title="Github lik" target="_blank"
+      <a
+        href="https://github.com/Olesia20"
+        title="Github Profile"
+        target="_blank"
         ><i class="fa-brands fa-github"></i
       ></a>
     </div>
