Added changes to the work page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row">
           <div class="col-lg-6 text-center mt-5">
             <a href="/work.html"
-              ><img src="images/23.jpg" class="img-fluid" alt="Fashion Show"
+              ><img src="images/23a.jpg" class="img-fluid" alt="Fashion Show"
             /></a>
             <a href="work.html" title="Go to work page">
               <h4 class="mt-4">Fashion show</h4></a
@@ -86,7 +86,7 @@
           </div>
           <div class="col-lg-6 text-center mt-5">
             <a href="/work.html#pattern"
-              ><img src="images/15.jpg" class="img-fluid" alt="Fashion show"
+              ><img src="images/15.png" class="img-fluid" alt="Fashion show"
             /></a>
             <a href="/work.html#pattern" title="Go to work page">
               <h4 class="mt-4">Pattern work</h4></a
@@ -111,7 +111,7 @@
                 alt="Ukraine app Preview"
             /></a>
             <a href="https://fabulous-belekoy-ceb011.netlify.app/">
-              <h4 class="mt-4" title="Go to Netlify">Ukraine app</h4></a
+              <h4 class="mt-4" title="Go to Netlify">Ukraine Museum app</h4></a
             >
           </div>
           <div class="text-center">
