--- a/work.html
+++ b/work.html
@@ -252,32 +252,50 @@
     <hr />
     <div class="container">
       <div class="row mt-5">
-        <div class="col-lg-6">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-3">
           <img
             src="images/1.png"
-            class="photo"
+            class="img-fluid mt-4 photo"
             alt="Plate with pattern chicken"
           />
         </div>
-        <div class="paragraf col-lg-6">
+        <div class="paragraf col-lg-6 mt-4">
+          <img src="images/1a.png" class="img-fluid ms-3 photo" alt="" />
+        </div>
+        <div class="col-lg-3"></div>
+      </div>
+    </div>
+    <div id="pattern" class="container">
+      <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-4 mt-4">
+          <img src="images/12a.png" class="img-fluid mb-5" alt="" />
+        </div>
+        <div class="col-lg-6 mt-4">
           <p>
+            <strong>The Roots</strong>
+            <br />
             This collection is decorated with a print inspired by the Ukrainian
             ceramics tradition. It contains drawings from two plates. Pyotr
-            Markovich's chickens and Zinovy Bereza's deer meet on the fabric
+            Markovich's chickens and Zinovy Bereza's deer meet on the fabric. It
+            is an interesting process of creating a pattern and watching how the
+            illustration turns into fabric and then into clothes.
           </p>
         </div>
       </div>
     </div>
+    <hr class="mb-5" />
     <div
-      id="carouselExampleInterval"
-      class="carousel slide mb-5 second-page"
-      data-bs-ride="carousel"
+      id="carouselExampleControlsNoTouching"
+      class="carousel slide second-page"
+      data-bs-touch="false"
     >
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
+        <div class="carousel-item active">
           <img src="images/30.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
-        <div class="carousel-item" data-bs-interval="2000">
+        <div class="carousel-item">
           <img src="images/31.jpg" class="d-block w-100" alt="Fashion show" />
         </div>
         <div class="carousel-item">
@@ -296,7 +314,7 @@
       <button
         class="carousel-control-prev"
         type="button"
-        data-bs-target="#carouselExampleInterval"
+        data-bs-target="#carouselExampleControlsNoTouching"
         data-bs-slide="prev"
       >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -305,13 +323,14 @@
       <button
         class="carousel-control-next"
         type="button"
-        data-bs-target="#carouselExampleInterval"
+        data-bs-target="#carouselExampleControlsNoTouching"
         data-bs-slide="next"
       >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
     <div class="container">
       <div class="row">
         <div class="col-lg-2">
