Changed Github link

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
           target="_blank"
           ><i class="fa-brands fa-facebook"></i
         ></a>
-        <a href="https://github.com/Olesia20" title="Github Profile" target="_blank"
+        <a href="https://github.com/Olesia20/New-porfolio" title="Github Profile" target="_blank"
           ><i class="fa-brands fa-github"></i
         ></a>
       </div>
