--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           ><i class="fa-brands fa-facebook"></i
         ></a>
         <a
-          href="https://github.com/Olesia20"
+          href="https://github.com/Olesia20/New-porfolio"
           title="Github Profile"
           target="_blank"
           ><i class="fa-brands fa-github"></i
